--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -1,9 +1,6 @@
-fastapi==0.115.2
-uvicorn==0.30.6
-httpx==0.27.2
-psycopg[binary,pool]==3.2.10
-pydantic==2.9.2
-python-dotenv==1.0.1
-reportlab==4.2.5
-qrcode==7.4.2
-python-multipart==0.0.9
+fastapi
+uvicorn
+psycopg[binary]
+psycopg_pool
+xmltodict
+python-multipart
